--- a/app/views/user/dashboards/show.html.erb
+++ b/app/views/user/dashboards/show.html.erb
@@ -1,2 +1,5 @@
-<h1>User::Dashboard#show</h1>
-<p>Find me in app/views/user/dashboard/show.html.erb</p>
+<h1 class="font-bold text-2xl">
+  <%= t(".greeting", name: current_user.username) %>
+</h1>
+
+<p class="mt-4">Find me in app/views/user/dashboards/show.html.erb</p>
