--- a/app/views/pokemon/_pokemon.html.erb
+++ b/app/views/pokemon/_pokemon.html.erb
@@ -5,7 +5,7 @@
   %>
 
   <p class="text-gray-400">
-    <%= "#" + "#{pokemon.external_id}".rjust(3, "0") %>
+    <%= pokemon.number %>
   </p>
 
   <p class="font-bold mb-4">
